# JIMP2

./: .appveyor.yml  .travis.yml  README.md
lab1/doublebasepalindromes/: CMakeLists.txt  DoubleBasePalindromes.cpp  doubleBasePalindromes.cpp  doubleBasePalindromes.h  main.cpp
lab1/factorial/: Factorial.cpp  main.cpp
lab1/multiplicationtable/: CMakeLists.txt  MultiplicationTable.cpp  main.cpp  multiplicationTable.cpp  multiplicationTable.h
lab1/palindrome/: CMakeLists.txt  Palindrome.cpp  main.cpp  palindrome.cpp  palindrome.h
lab1/reversestring/: CMakeLists.txt  ReverseString.cpp  main.cpp  reverseString.cpp  reverseString.h
lab10/academiascheduler/: CMakeLists.txt  Scheduler.cpp  Scheduler.h  main.cpp
lab10/algotest/: Algo.cpp  Algo.h  main.cpp
lab11/: CMakeLists.txt
lab11/factorymethod/: FactoryMethod.cpp  FactoryMethod.h  main.cpp
lab11/templatemethods/: CMakeLists.txt  Templates.cpp  Templates.h  main.cpp
lab12/academiasequentialgenerator/: CMakeLists.txt  SequentialGenerator.cpp  SequentialGenerator.h
lab12/academiateacherhash/: CMakeLists.txt  TeacherHash.cpp  TeacherHash.h
lab12/timerecorder/: CMakeLists.txt  TimeRecorder.cpp  TimeRecorder.h  main.cpp
lab12/tree/: Tree.cpp  Tree.h  main.cpp
lab12/treeiterators/: CMakeLists.txt  TreeIterators.cpp  TreeIterators.h
lab13/arabicroman/: ArabicRoman.cpp  ArabicRoman.h  main.cpp
lab2/array2d/: Array2d.cpp  Array2d.h  CMakeLists.txt  (+1 more)
lab3/minimaltimedifference/: CMakeLists.txt  MinimalTimeDifference.cpp  MinimalTimeDifference.h  main.cpp
lab4/: CMakeLists.txt
lab8/: CMakeLists.txt
(+95 files in other folders)
